SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/Buyer_s_order_item__c.object-meta.xml
<CustomObject>
    <label>Buyer&#39;s order item</label>
    <nameField>
        <label>Buyer&#39;s order item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buyer&#39;s order items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>