SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Buyer_product_relation__c.field-meta.xml
<CustomField>
    <fullName>Buyer_product_relation__c</fullName>
    <label>Buyer product relation</label>
    <referenceTo>Buyer_product__c</referenceTo>
    <relationshipLabel>Buyer&#39;s order items</relationshipLabel>
    <relationshipName>Buyer_s_order_items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>