SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Buyer_s_cart_related__c.field-meta.xml
<CustomField>
    <fullName>Buyer_s_cart_related__c</fullName>
    <label>Buyer&#39;s cart related</label>
    <referenceTo>Buyer_s_cart__c</referenceTo>
    <relationshipLabel>Buyer&#39;s order items</relationshipLabel>
    <relationshipName>Buyer_s_order_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>