SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Catalog_line_Product__c.field-meta.xml
<CustomField>
    <fullName>Catalog_line_Product__c</fullName>
    <displayFormat>Pr-{0000}</displayFormat>
    <label>Catalog line Product</label>
    <type>AutoNumber</type>
</CustomField>