SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Product_description__c.field-meta.xml
<CustomField>
    <fullName>Product_description__c</fullName>
    <formula>Buyer_product_relation__r.Blurb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product description</label>
    <type>Text</type>
</CustomField>