SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <label>Product name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>