SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Product_price__c.field-meta.xml
<CustomField>
    <fullName>Product_price__c</fullName>
    <label>Product price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>