SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Product_quantity__c.field-meta.xml
<CustomField>
    <fullName>Product_quantity__c</fullName>
    <label>Product quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>