SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Product_related__c.field-meta.xml
<CustomField>
    <fullName>Product_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product related</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Buyer&#39;s order items</relationshipLabel>
    <relationshipName>Product_related</relationshipName>
    <type>Lookup</type>
</CustomField>