SC_Ira_project_for_CT_internship/force-app/main/default/objects/Buyer_s_order_item__c/fields/Total_product_price__c.field-meta.xml
<CustomField>
    <fullName>Total_product_price__c</fullName>
    <formula>Buyer_product_relation__r.Price__c  * Product_quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total product price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>